Rename project roki.js to roki-three

--- a/example/arm/index.html
+++ b/example/arm/index.html
@@ -7,7 +7,7 @@
         "imports": {
           "three": "https://unpkg.com/three@0.152.2/build/three.module.js",
           "three/addons/": "https://unpkg.com/three@0.152.2/examples/jsm/",
-          "roki": "../../dist/roki.js"
+          "roki-three": "../../dist/roki-three.js"
         }
       }
     </script>
