--- a/pages/index.html
+++ b/pages/index.html
@@ -65,6 +65,7 @@
 
       .toolbar {
         display: flex;
+        align-items: center;
         gap: 8px;
         margin-top: 12px;
       }
@@ -130,6 +131,12 @@
         margin-top: 12px;
         color: #333;
       }
+
+      #playbackTime {
+        font-size: 13px;
+        line-height: 1;
+        color: #333;
+      }
     </style>
   </head>
   <body>
@@ -161,6 +168,7 @@
           <button id="playButton" type="button">Play</button>
           <button id="pauseButton" type="button">Pause</button>
           <button id="restartButton" type="button">Restart</button>
+          <span id="playbackTime">Time: 0.00s</span>
         </div>
 
         <div id="pairs"></div>
